# titanic

./: .gitignore  README.md  docker-compose.yml  notes.txt  pyproject.toml  requirements.txt
models/: model.sav
serve/: Dockerfile  requirements.txt
serve/src/: config.py  functions.py  predict.py
tests/unit/: transformers_tests.py  unit_tests.py
train/: Dockerfile  requirements.txt
train/models/: model.sav
train/src/: pipelines.py  prep_data.py  train_model.py  transformers.py
