[tool.poetry]
name = "titanic"
version = "1.2"
description = "Predictive model applied to surviving in Titanic Disaster"
authors = ["Arturo Torres <arturo.torres@opensols.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
path = "^16.5.0"
pydantic = "^1.10.2"
scikit-learn = "^1.1.3"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"